force-app/main/default/objects/Hot_Swap__c/Hot_Swap__c.object-meta.xml
<CustomObject>
    <label>Hot Swap</label>
    <nameField>
        <label>Hot Swap  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hot Swaps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>