force-app/main/default/objects/Hot_Swap__c/fields/Customer_Service_Action__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Action__c</fullName>
    <label>Customer Service Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>