force-app/main/default/objects/Hot_Swap__c/fields/Hot_Swap_Products_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Products_Tracking_Id__c</fullName>
    <label>Hot Swap Products Tracking Id &amp; Case Id</label>
    <length>38768</length>
    <type>LongTextArea</type>
</CustomField>