force-app/main/default/objects/Hot_Swap__c/fields/Hot_Swap_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Request_Status__c</fullName>
    <formula>IF (HotSwap_Final_Status__c==FALSE, TEXT(SPA__r.Hot_Swap_Approved_Or_Rejected__c),&apos;Request Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot Swap Approval Status</label>
    <type>Text</type>
</CustomField>