force-app/main/default/objects/Hot_Swap__c/fields/Hot_Swap_Request_Summary__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Request_Summary__c</fullName>
    <label>Hot Swap Request Summary</label>
    <length>12</length>
    <type>Text</type>
</CustomField>