force-app/main/default/objects/Hot_Swap__c/fields/HotSwap_Final_Status__c.field-meta.xml
<CustomField>
    <fullName>HotSwap_Final_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HotSwap Final Status</label>
    <type>Checkbox</type>
</CustomField>