force-app/main/default/objects/Hot_Swap__c/fields/HotSwap_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HotSwap_Product_Quantity__c</fullName>
    <label>Requested Qty/Sold Qty-Product Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>