force-app/main/default/objects/Hot_Swap__c/fields/Reason_For_Hot_Swap__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Hot_Swap__c</fullName>
    <label>Reason For Hot Swap</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>