force-app/main/default/objects/Hot_Swap__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>