force-app/main/default/objects/Hot_Swap__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>