force-app/main/default/objects/Hot_Swap__c/fields/Shipping_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date_2__c</fullName>
    <label>Shipping Date 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>