force-app/main/default/objects/Hot_Swap__c/fields/SPA__c.field-meta.xml
<CustomField>
    <fullName>SPA__c</fullName>
    <label>SPA</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Hot Swaps</relationshipLabel>
    <relationshipName>Hot_Swaps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>