force-app/main/default/objects/Hot_Swap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPA__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>HotSwap_Product_Quantity__c</columns>
    <columns>Reason_For_Hot_Swap__c</columns>
    <columns>Hot_Swap_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>