force-app/main/default/objects/Hot_Swap__c/listViews/Customer_Action_Completed.listView-meta.xml
<ListView>
    <fullName>Customer_Action_Completed</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>SPA__c</columns>
    <columns>Customer_Service_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Service_Action__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Customer Action Completed</label>
</ListView>