force-app/main/default/objects/Hot_Swap__c/listViews/Pending_Hot_Swap.listView-meta.xml
<ListView>
    <fullName>Pending_Hot_Swap</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>SPA__c</columns>
    <columns>Hot_Swap_Request_Summary__c</columns>
    <columns>HotSwap_Product_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hot_Swap_Request_Summary__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Customer_Service_Action__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Hot Swaps</label>
</ListView>